# claude-partner

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude_partner.spec  pyproject.toml  start.sh
.codegraph/: .gitignore
.github/workflows/: ci.yml  release-tauri.yml  release.yml
docs/: prd.md
docs/design-demos/: workbench-prototype.html
docs/frontend/: onboarding.md
docs/superpowers/plans/: 2026-06-11-i18n.md  2026-06-11-macos-permission-flow.md  2026-06-22-health-reminder-core.md  2026-06-22-health-reminder-enhance.md  2026-06-24-health-settings-migration.md  2026-06-24-workbench-local-mvp.md  2026-06-26-workbench-file-workspace.md  2026-06-26-workbench-yaml-file-support.md
docs/superpowers/specs/: 2026-06-10-frontend-refactor-design.md  2026-06-11-i18n-design.md  2026-06-22-screenshot-edit-toolbar-design.md  2026-06-24-health-settings-migration-design.md  2026-06-24-workbench-design.md  (+4 more)
scripts/: build.py  bump-version.mjs  claude-partner.desktop  generate_icon.py  icon.icns  install.sh  mock_api_server.py  test_rest_endpoints.py  verify_frontend.py
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: claude_cli.rs  claude_code_assets.rs  config.rs  lib.rs  state.rs  tray.rs
src-tauri/src/cloud_sync/: engine.rs  git_cli.rs  mod.rs  scheduler.rs  snapshot.rs
src-tauri/src/commands/: claude_md.rs  cloud_sync.rs  config.rs  github_trending.rs  health.rs  mod.rs  permissions.rs  prompt_optimizer.rs  scratchpad.rs  screenshot.rs  workbench.rs  workbench_dependencies.rs
src-tauri/src/health/: mod.rs  monitor.rs  reminder.rs  state.rs  water.rs
src-tauri/src/models/: claude_md.rs  mod.rs  scratchpad.rs
src-tauri/src/net/: discovery.rs  http_server.rs  mod.rs  peer_client.rs
src-tauri/src/net/routes/: claude_code_assets.rs  claude_md_sync.rs  mod.rs  scratchpad_sync.rs  workbench.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/screenshot/: capture.rs  mod.rs  overlay.rs
src-tauri/src/storage/: claude_md_repo.rs  health_repo.rs  mod.rs  scratchpad_repo.rs  workbench_session_repo.rs  workbench_worktree_repo.rs
src-tauri/src/sync/: claude_md.rs  engine.rs  mod.rs  scratchpad.rs
src-tauri/src/workbench/: dependencies.rs  file_content.rs  file_preview.rs  git.rs  mod.rs  models.rs  remote_client.rs  remote_directory.rs  remote_events.rs  remote_ids.rs  remote_protocol.rs  sessions.rs  sqlite_preview.rs
src/claude_partner/: __init__.py  app.py  config.py
tests/: test_permissions.py
uiux/: 01-main.html  02-transfer.html  03-prompts.html  04-devices.html  05-settings.html  06-welcome.html  index.html
web/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/tests/: screenshot-overlay.spec.ts
(+305 files in other folders)
