[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-partner"
version = "0.1.0"
description = "跨平台局域网协作工具：文件传输、区域截图、Prompt管理与同步"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "zeroconf>=0.131.0",
    "qasync>=0.27.1",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.0",
]

[project.scripts]
claude-partner = "claude_partner.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
