[package]
name = "app"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
# M3 P2P 网络层：axum HTTP server（供对端调用）+ reqwest peer client + mdns-sd 发现 + tower（axum 服务依赖）
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mdns-sd = "0.11"
# M5 文件传输：tokio-util 提供 CancellationToken（每块发送前检查取消标志）
tokio-util = { version = "0.7", features = ["rt"] }
# M5 文件传输：SHA256 完整性校验（对照 Python hashlib.sha256）
sha2 = "0.10"
# M6 区域截图：xcap 跨平台抓屏（物理像素）、arboard 直接写剪贴板图片、image 裁剪/PNG 编码、base64 给前端背景
xcap = "0.4"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", features = ["png"] }
base64 = "0.22"
# M8 自动更新：tauri-plugin-updater 负责 check/download/install（签名校验 + 三平台替换），
# tauri-plugin-process 提供 app.restart() 安装后重启
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# M10 健康提醒:device_query(macOS 键鼠状态查询)、rdev(Windows/Linux 全局事件)、
# active-win-pos-rs(活动窗口标题/进程名)、notification(系统通知)、autostart(开机自启)
device_query = "1.1"
rdev = "0.5"
active-win-pos-rs = "0.10"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
